# tree-sitter-nunjucks

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar-expressions.js  grammar-literals.js  grammar-rules.js  grammar-statements.js  grammar.js  package.json  pyproject.toml  setup.py  temp.njk  tree-sitter.json
.github/workflows/: main.yml
bindings/c/: tree-sitter-nunjucks.pc.in
bindings/c/tree_sitter/: tree-sitter-nunjucks.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  binding_test.js  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_nunjucks/: __init__.py  __init__.pyi  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterNunjucksTests/: TreeSitterNunjucksTests.swift
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: comments.txt  expressions.txt  front_matter.txt  statements.txt  test.txt
